# pressnt

./: .gitignore  Caddyfile  Dockerfile  docker-compose.yml  mail.json  manage.py  pyproject.toml
comments/: __init__.py  models.py
comments/migrations/: 0001_initial.py  0002_mpttcomment_old.py  0003_alter_mpttcomment_options.py
comments/templates/: _comments.html
press/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  utils.py  verification.py  views.py
press/migrations/: 0001_initial.py  0002_post_comment_count.py  0003_alter_post_content.py  0004_alter_post_content.py  0005_alter_post_content.py  0006_alter_profile_pic.py  0007_alter_profile_pic.py  0008_post_modified_at.py
press/services/: rank.py
press/templates/press/: confirm_user_delete.html  contact.html  contact_success.html  email_sent.html  home.html  news.html  post_detail.html  post_form.html  profile_detail.html  profile_form.html  register.html
press/templatetags/: press_tags.py
pressnt/: asgi.py  settings.py  sitemaps.py  urls.py  wsgi.py
templates/: base.html  confirm_template.html  mail_body.html  mail_body.txt
templates/comments/: form.html
templates/markdownx/: widget.html
templates/registration/: logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
theme/static_src/: package-lock.json  package.json
theme/static_src/src/: styles.css
