[tool.poetry]
name = "pressnt"
version = "0.1.0"
description = "Longform writting social network"
authors = ["Daniel Valenzuela <dsvalenzuela@uc.cl>"]

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^9.3.0"
django-markdownx = { "git" = "https://github.com/adi-/django-markdownx.git" }
django-tailwind = "^3.4.0"
django-contrib-comments = "^2.2.0"
django-mptt = "^0.14.0"
Django = "^4.1.4"
django-configurations = {extras = ["cache", "database", "email", "search"], version = "^2.4"}
daphne = "^4.0.0"
psycopg2-binary = "^2.9.5"
Twisted = {extras = ["tls", "http2"], version = "^22.10.0"}
django-storages = "^1.13.1"
boto3 = "^1.26.32"
django-resized = "^1.0.2"
django-sendgrid-v5 = "^1.2.1"
PyJWT = "^2.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
djlint = "^1.19.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
